<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="textview">TextView</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="mens">Men</string>
    <string name="womens">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="button">Button</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="NEXT">NEXT</string>
    <string name="i_am_a">I am a</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="desired_league">Desired League:</string>
    <string name="search_league">Looking a co-ed beginner league for you</string>
</resources>
